<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie_white_36dp"
        android:title="@string/title_movie"/>

    <item
        android:id="@+id/navigation_tvshow"
        android:icon="@drawable/ic_tv_white_36dp"
        android:title="@string/title_tvshow" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_fav_white_36dp"
        android:title="@string/title_favorite" />

</menu>